[package]
name = "keygate-sdk"
version = "0.1.0"
authors = [
    "Vicente Bermudez <thevincentes@gmail.com>",
    "Joaquin Ballara <joaquinballara02@gmail.com>",
]
homepage = "https://github.com/keygate-vault/sdk"
repository = "https://github.com/keygate-vault/sdk"
readme = "README.md"
edition = "2021"

[lib]
name = "keygate_sdk"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "keygate_sdk"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
ic-agent = "0.39.0"
ic-utils = "0.39.0"
ic-ledger-types = "0.13.0"
ic-cdk = "0.16.0"
tokio = { version = "1.40.0", features = ["full"] }
libflate = "=2.1.0"
serde_cbor = "0.11.0"
candid = "0.10.10"
serde = "1.0.214"
strum_macros = "0.26.2"
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["async-std", "tokio-runtime"] }
serde_json = "1.0.132"
strum = "0.26.1"